<?xml version="1.0" encoding="utf-8"?>

<!--
  selasa 7 juni 2022, 1011983, Rahmatullah Rizki, IF7
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

        <androidx.cardview.widget.CardView
            android:layout_margin="10dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp"
            android:layout_width="200dp"
            android:layout_height="200dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:background="@drawable/profil"
                    android:contentDescription="@string/txt_image" />

        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nim"
            android:padding="2dp"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:textColor="#030200" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nama"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:textColor="#030200"/>

        <TextView
            android:id="@+id/tv_kelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_kelas"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:textSize="18sp"
            android:textColor="#030200"/>

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_deskripsi"
            android:layout_gravity="start"
            android:padding="2dp"
            android:textSize="18sp"
            android:textColor="#030200"/>
        </LinearLayout>
</LinearLayout>
</ScrollView>